--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,15 @@ jobs:
         python3 -m pip install qmk
         qmk setup -y
 
+    - name: Prepare keymap
+      run: |
+        mkdir -p keyboards/crkbd/keymaps/glp_qwerty_luna
+        cp keymap.c keyboards/crkbd/keymaps/glp_qwerty_luna/
+        echo "RGBLIGHT_ENABLE = yes" > keyboards/crkbd/keymaps/glp_qwerty_luna/rules.mk
+
     - name: Build firmware
       run: |
-        qmk compile -kb crkbd -km default
+        qmk compile -kb crkbd -km glp_qwerty_luna -t nice_nano_v2
 
     - name: Upload UF2 file
       uses: actions/upload-artifact@v4
