--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,28 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout QMK repository
       uses: actions/checkout@v3
+      with:
+        repository: lowpoly-thunderbird/qmk_firmware
+        path: qmk_firmware
 
     - name: Set up QMK
       run: |
         sudo apt-get update
         sudo apt-get install -y gcc unzip wget zip python3-pip
         python3 -m pip install qmk
-        qmk setup -y
-        
-    - name: Prepare keymap
-      run: |
-        mkdir -p keyboards/crkbd/keymaps/default
-        cp keymap.c keyboards/crkbd/keymaps/default
-        echo "RGBLIGHT_ENABLE = yes" > keyboards/crkbd/keymaps/default/rules.mk
+        qmk setup -H $GITHUB_WORKSPACE/qmk_firmware -y
 
     - name: Build firmware
       run: |
-        qmk compile -kb crkbd -km default
+        cd $GITHUB_WORKSPACE/qmk_firmware
+        qmk compile -kb crkbd -km default -t nice_nano_v2
 
     - name: Upload UF2 file
       uses: actions/upload-artifact@v4
       with:
         name: firmware.uf2
-        path: .build/*.uf2
+        path: qmk_firmware/.build/*.uf2
